# learn-wgpu

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  wasm-targets.json
.github/workflows/: deploy.yml
code/beginner/tutorial1-window/: Cargo.toml
code/beginner/tutorial1-window/src/: lib.rs  main.rs
code/beginner/tutorial2-surface/: Cargo.toml
code/beginner/tutorial2-surface/src/: challenge.rs  lib.rs  main.rs
code/beginner/tutorial3-pipeline/: Cargo.toml
code/beginner/tutorial3-pipeline/src/: challenge.rs  challenge.wgsl  lib.rs  main.rs  shader.wgsl
code/beginner/tutorial4-buffer/: Cargo.toml
code/beginner/tutorial4-buffer/src/: challenge.rs  lib.rs  main.rs  shader.wgsl
code/beginner/tutorial5-textures/: Cargo.toml
code/beginner/tutorial5-textures/src/: challenge.rs  lib.rs  main.rs  shader.wgsl  texture.rs
code/beginner/tutorial6-uniforms/: Cargo.toml
code/beginner/tutorial6-uniforms/src/: challenge.rs  lib.rs  main.rs  shader.wgsl
code/beginner/tutorial7-instancing/: Cargo.toml
code/beginner/tutorial7-instancing/src/: challenge.rs  lib.rs  main.rs  texture.rs
code/beginner/tutorial8-depth/: Cargo.toml
code/beginner/tutorial8-depth/src/: challenge.rs  challenge.wgsl  lib.rs  main.rs  shader.wgsl  texture.rs
code/beginner/tutorial9-models/: Cargo.toml
code/beginner/tutorial9-models/res/: cube.mtl
code/beginner/tutorial9-models/src/: lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
code/showcase/framework/: Cargo.toml
code/showcase/framework/src/: buffer.rs  camera.rs  lib.rs  light.rs  model.rs  pipeline.rs  shader_canvas.frag.wgsl  shader_canvas.rs  shader_canvas.vert.wgsl  texture.rs
code/showcase/gifs/: Cargo.toml
code/showcase/windowless/: Cargo.toml
code/showcase/windowless/src/: main.rs
code/wasm-builder/: Cargo.toml
code/wasm-builder/src/: main.rs
demo_server/: Cargo.toml
demo_server/src/: main.rs
docs/.vuepress/: config.ts
docs/.vuepress/components/: AutoGithubLink.vue
docs/beginner/tutorial1-window/: README.md
run-wasm/: Cargo.toml
