[workspace]
resolver = "2"
members = [
    "code/wasm-builder",
    # beginner tutorials
    "code/beginner/*",
    # intermediate tutorials
    "code/intermediate/*",
    # showcase
    "code/showcase/*",
    "run-wasm",
]
exclude = [
    "code/showcase/imgui-demo",
    "code/showcase/pong",
]

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.19", features = ["derive"] }
cargo-run-wasm = "0.4"
console_error_panic_hook = "0.1"
fs_extra = "1.3"
glam = { version = "0.29", features = ["bytemuck"] }
glob = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pollster = "0.3"
rayon = "1.10"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = { version = "4.0", default-features = false, features = ["async"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Window", "Location"] }
wgpu = "22"
winit = "0.30"
