[package]
name = "tutorial1-window"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial1-window"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
