[package]
name = "tutorial4-buffer"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial4-buffer"
path = "src/main.rs"

[[bin]]
name = "tutorial4-challenge"
path = "src/challenge.rs"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.18", features = ["derive"] } # NEW!
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "22"
winit = "0.30"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
wgpu = { version = "22", features = ["webgl"] }
