[package]
name = "tutorial5-textures"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial5-textures"
path = "src/main.rs"


[[bin]]
name = "tutorial5-challenge"
path = "src/challenge.rs"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
