[package]
name = "framework"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2021"

[dependencies]
bytemuck.workspace = true
glam.workspace = true
image.workspace = true
thiserror.workspace = true
tobj.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-time.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
reqwest.workspace = true
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
