[package]
name = "windowless"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2021"

[[bin]]
name = "windowless"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
oneshot.workspace = true
pollster.workspace = true
wgpu.workspace = true
